[package]
name = "learn_candle"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"]  }
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.1"
plotters = "0.3.7"
image = "0.25.6"
walkdir = "2.5.0"
rayon = "1.10.0"
candle-einops = { git = "https://github.com/tomsanbear/candle-einops", branch = "latest-candle" }